Fix more URL to URI in source